# least_squares_estimator

./: CMakeLists.txt  README.md  package.xml
include/least_squares_fitter/: calculator_node.h
scripts/: calculator_node.py  least_squares_calculate.py  quadratic_coefficients.csv
src/: calculator_node.cpp
